//package wanyou.game.protocol;
//客户端请求好友信息

message BceRequestFriendInfo
{
    required string uid  = 1 ;
    optional int32  type = 2 [default = 0];
}